# love-vids-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  list_vids.py  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/api/v1/: payments.py  referrals.py  storage.py  users.py  vibes.py
app/core/: config.py  security.py  storage.py
app/db/: base.py  session.py
app/domains/identity/: models.py  service.py
app/domains/payments/: models.py  service.py
app/domains/referrals/: models.py  service.py
app/domains/vibes/: models.py  service.py
app/schemas/: identity.py  payments.py  responses.py  vibes.py
app/tasks/: vibes.py  worker.py
migrations/: env.py
migrations/versions/: c1a2b9e18684_initial_migration.py
